[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "segment_tools"
version = "1.0.0"
authors = [  { name="roiro" },]
description = "Segmentation tools"
license = {text = "MIT License"}
requires-python = "==3.10.*"
dependencies = [
    "torch @ https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp310-cp310-linux_x86_64.whl#sha256=0d4e8c52a1fcf5ed6cfc256d9a370fcf4360958fc79d0b08a51d55e70914df46",
    "torchvision @ https://download.pytorch.org/whl/cu121/torchvision-0.16.0%2Bcu121-cp310-cp310-linux_x86_64.whl#sha256=e76e78d0ad43636c9884b3084ffaea8a8b61f21129fbfa456a5fe734f0affea9",
    "ultralytics == 8.0.120",
    "GroundingDINO @ https://github.com/qwertyroiro/segment_tools/releases/download/whl/groundingdino-0.1.0-cp310-cp310-linux_x86_64.whl",
    "clip @ https://github.com/qwertyroiro/segment_tools/releases/download/whl/clip-1.0-py3-none-any.whl",
    "segment_anything @ git+https://github.com/facebookresearch/segment-anything.git@6fdee8f2727f4506cfbbe553e23b895e27956588",
    "transformers == 4.37.1",
    "numpy == 1.23.5",
    "cityscapesscripts @ git+https://github.com/mcordts/cityscapesScripts.git@a7ac7b4062d1a80ed5e22d2ea2179c886801c77d",
    "einops == 0.4.1",
    "diffdist == 0.1",
    "mmcv == 1.6.2",
    "detectron2 @ https://github.com/qwertyroiro/segment_tools/releases/download/whl/detectron2-0.6-cp310-cp310-linux_x86_64.whl",
    "imutils == 0.5.4",
    "rich == 13.7.1",
    "natten @ https://shi-labs.com/natten/wheels/cu121/torch2.2.0/natten-0.15.1%2Btorch220cu121-cp310-cp310-linux_x86_64.whl"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.hatch.metadata]
allow-direct-references = true